[tool.poetry]
name = "graph game"
version = "1"
description = "graph algorithms"
authors = ["Artur Lagunov"]
license = "1"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
